add tourist attraction

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li>Kruger National Park</li>
         <li>Cape Point</li>
         <li>Beautiful Beaches</li>
+        <li>tourist attraction</li>
       </ul>
     </div>
     <div class="section">
