--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li>Cape Point</li>
         <li>Beautiful Beaches</li>
         <li>tourist attraction</li>
+        <li>coldest weather</li>
       </ul>
     </div>
     <div class="section">
