tested the git status

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li>Durban</li>
         <li>East London</li>
         <li>Port Elizabeth</li>
+        <lil>>peter maritzburg</lil>
       </ol>
     </div>
     <div class="section">
